--- a/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
+++ b/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
@@ -18,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OnlineLibrary.Business\OnlineLibrary.Business.csproj" />
     <ProjectReference Include="..\OnlineLibrary.DAL\OnlineLibrary.DAL.csproj" />
   </ItemGroup>
 
