--- a/OnlineLibrary/OnlineLibrary.DAL/OnlineLibrary.DAL.csproj
+++ b/OnlineLibrary/OnlineLibrary.DAL/OnlineLibrary.DAL.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201125094701_SetMinValueForBookQuantity.cs" />
+    <Compile Remove="Migrations\20201125094701_SetMinValueForBookQuantity.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DataAnnotationsExtensions" Version="5.0.1.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
