--- a/OnlineLibrary/OnlineLibrary/appsettings.json
+++ b/OnlineLibrary/OnlineLibrary/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=OnlineLibraryDB;Trusted_Connection=True;Integrated Security=True;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "Key": "Th1s1sMy5up3r53cr3tK3y",
+    "Issuer": "https://localhost:5001/"
+  },
   "AllowedHosts": "*"
 }
